@@ -1,3 +1,7 @@
+2007-08-13  Jb Evain  <jbevain@novell.com>
+
+	* Makefile: tune on net_2_1 install.
+
 2007-08-11  Jb Evain  <jbevain@novell.com>
 
 	* Descriptors/System.xml, Makefile: add a descriptor
